modificati nomi delle classe
modificati i nomi di header e linkheader con paragraph e paragraphTitle

--- a/html.html
+++ b/html.html
@@ -8,8 +8,8 @@
 <body>
   <h1>PAOLO MERIALDO </h1>
 
-      <div class="header">
-       <span class="linkheader">GENERAL INFO</span>
+      <div class="paragraph">
+       <span class="paragraphTitle">GENERAL INFO</span>
       <ul>
        <li><div><a href="http://www.uniroma3.it" itemprop="url"><span itemprop="name">Universit&agrave; Roma Tre</span></a></div></li>
        <li><div><a href="http://www.dia.uniroma3.it"><span>Dipartimento di ingegneria</span></a></div></li>
@@ -22,9 +22,8 @@
        <li><div><a href="http://asi.uniroma3.it/download/curriculum/1621524546Paolo%20Merialdo%20-%202021-05-14%20-%20EN.pdf">My curriculum vitae</a> (pdf)</div></li>
       </div>
     </ul>
-  <div class="homeBody">
-    <div class="header">
-      <span class="linkheader">RESEARCH</span>
+    <div class="paragraph">
+      <span class="paragraphTitle">RESEARCH</span>
       <h3>Research Activities</h3>
       <ul>
         <li><strong>In codice Ratio: Machine Learning meets Digital Humanities</strong>. Read the <a href="https://www-technologyreview-com.cdn.ampproject.org/c/s/www.technologyreview.com/s/610530/ai-tackles-the-vaticans-secrets/amp">MIT Technology Review article</a> on the project! 
@@ -69,8 +68,8 @@
       </ul>
   </div>
   
-    <div class="header">
-      <span class="linkheader">DIDATTICA (TEACHING)</span>
+    <div class="paragraph">
+      <span class="paragraphTitle">DIDATTICA (TEACHING)</span>
       <h3>Corsi, Orario di ricevimento, tesi, valutazioni della didattica, ecc.</h3>
       <ul>
         <li>Vedi <a href="https://sites.google.com/site/paolomerialdo/">https://sites.google.com/site/paolomerialdo/</a>
@@ -78,8 +77,8 @@
       </ul>
   </div>
   
-    <div class="header">
-      <span class="linkheader">OTHER ACTIVITIES</span>
+    <div class="paragraph">
+      <span class="paragraphTitle">OTHER ACTIVITIES</span>
       <h3>Innovation and entrepreneurship</h3>
       <ul>
         <li>Cofounder and organizer of <a href="http://www.dock3.it">Dock3 - The Startup Lab</a>
@@ -91,8 +90,8 @@
       </ul>
     </div>
 
-  <div class="header">
-    <span class="linkheader"> INSEGNAMENTI ANNO ACCADEMICO 2021-2022</span>
+  <div class="paragraph">
+    <span class="paragraphTitle"> INSEGNAMENTI ANNO ACCADEMICO 2021-2022</span>
     <ul>
       <li><strong>Sistemi Informativi su Web (6CFU)</strong></li>
         <ul>
@@ -117,8 +116,8 @@
     </ul>
 </div>
 
-    <div class="header">
-    <span class="linkheader">TIROCINI</span>
+    <div class="paragraph">
+    <span class="paragraphTitle">TIROCINI</span>
       <h3>proposte di tesi e tirocini nei progetti di ricerca</h3>
         <ul>
           <li>Progetto Kelpie (in collaborazione con University of Alberta)</li>
