cambiato layout generale e struttura delle classi
ora ogni paragrafo contiene anche una classe che lo contiene paragraphWarpper (per avere un colore sullo sfondo che non tiene conto dei bordi), e un titolo paragraphTitle per disaccoppiare il titolo con il paragrafo. 
modifiche estetiche: 
-cambiamento stile ,spacing e centramento dei titoli 
-modifica ai margini dei paragrafi 
-cambio generale dei font 
-cambio estetico degli anchor

--- a/homework2-siw.html
+++ b/homework2-siw.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="homework2-siw.css" />
   <title>Paolo Merialdo: Home Page (homework2-siw)</title>
 </head>
 <body>
   <h1>PAOLO MERIALDO </h1>
 
+
+       <div class="paragraphTitle">General info</div>
+    <div class = paragraphWrapper>   
       <div class="paragraph">
-       <span class="paragraphTitle">GENERAL INFO</span>
       <ul>
        <li><div><a href="http://www.uniroma3.it" itemprop="url"><span itemprop="name">Universit&agrave; Roma Tre</span></a></div></li>
        <li><div><a href="http://www.dia.uniroma3.it"><span>Dipartimento di ingegneria</span></a></div></li>
@@ -20,10 +23,13 @@
        <li><div>Fax: +39-06.5733.3211</div></li>
        <li><div><a href="mailto:paolo.merialdo@uniroma3.it" itemprop="email">paolo.merialdo@uniroma3.it</a></div></li>
        <li><div><a href="http://asi.uniroma3.it/download/curriculum/1621524546Paolo%20Merialdo%20-%202021-05-14%20-%20EN.pdf">My curriculum vitae</a> (pdf)</div></li>
+       </ul>
       </div>
-    </ul>
-    <div class="paragraph">
-      <span class="paragraphTitle">RESEARCH</span>
+    </div>
+
+    <div class="paragraphTitle">Research</div>
+    <div class = paragraphWrapper>   
+      <div class="paragraph">
       <h3>Research Activities</h3>
       <ul>
         <li><strong>In codice Ratio: Machine Learning meets Digital Humanities</strong>. Read the <a href="https://www-technologyreview-com.cdn.ampproject.org/c/s/www.technologyreview.com/s/610530/ai-tackles-the-vaticans-secrets/amp">MIT Technology Review article</a> on the project! 
@@ -66,58 +72,68 @@
         <li><a href="https://scholar.google.com/citations?hl=en&user=njKmu5cAAAAJ&view_op=list_works&sortby=pubdate">list of publications and citations</a> from <a href="http://scholar.google.com">Google Scholar</a></li>
         <li><a href="https://www.scopus.com/authid/detail.uri?authorId=6602539867">list of publications and citations</a> on <a href="http://www.scopus.com">Scopus</a></li>
       </ul>
+    </div>
   </div>
-  
-    <div class="paragraph">
-      <span class="paragraphTitle">DIDATTICA (TEACHING)</span>
+
+    
+    <div class="paragraphTitle">Didattica (teaching)</div>  
+    <div class = paragraphWrapper>   
+      <div class="paragraph">
       <h3>Corsi, Orario di ricevimento, tesi, valutazioni della didattica, ecc.</h3>
       <ul>
         <li>Vedi <a href="https://sites.google.com/site/paolomerialdo/">https://sites.google.com/site/paolomerialdo/</a>
         </li>
       </ul>
   </div>
-  
-    <div class="paragraph">
-      <span class="paragraphTitle">OTHER ACTIVITIES</span>
+  </div>
+
+    <div class="paragraphTitle">Other activities</div>  
+    <div class = paragraphWrapper>   
+      <div class="paragraph">
+
       <h3>Innovation and entrepreneurship</h3>
-      <ul>
-        <li>Cofounder and organizer of <a href="http://www.dock3.it">Dock3 - The Startup Lab</a>
+         <ul>
+          <li>Cofounder and organizer of <a href="http://www.dock3.it">Dock3 - The Startup Lab</a>
         </li>
         <li>Cofounder and organizer of <a href="http://www.innovactionlab.org">InnovAction Lab</a>
         </li>
         <li>Advisor at the <a href="http://www.luissenlabs.com">LuissEnlabs accelerator</a> in Rome</a>
         </li>
-      </ul>
+        </ul>
+      </div>
     </div>
 
-  <div class="paragraph">
-    <span class="paragraphTitle"> INSEGNAMENTI ANNO ACCADEMICO 2021-2022</span>
-    <ul>
-      <li><strong>Sistemi Informativi su Web (6CFU)</strong></li>
-        <ul>
-          <li>SECONDO SEMESTRE</li>
-          <li>(Laurea in Ingegneria Informatica, Laurea Magistrale in Ingegneria delle Tecnologie della Comunicazione e dell'Informazione)</li>
-        </ul>
-      <li><strong>Ingegneria dei dati (6CFU)</strong></li>
-        <ul>
-          <li>PRIMO SEMESTRE</li>
-          <li>(Laurea Magistrale in Ingegneria Informatica)</li>
-        </ul>
-      <li><strong>Conoscenze Utili per l'Inserimento nel Mondo del Lavoro (1CFU)</strong></li>
-        <ul>
-          <li>SECONDO SEMESTRE</li>
-          <li>(Laurea Magistrale in Ingegneria Informatica, Laurea Magistrale in Ingegneria Gestionale e dell'Automazione)</li>
-        </ul>
-      <li><strong>Imprenditorialità digitale (6 CFU)</strong></li>
-        <ul>
-          <li>PRIMO SEMESTRE</li>
-          <li>(Laurea Magistrale in Ingegneria Informatica, Laurea Magistrale in Ingegneria Gestionale e dell'Automazione)</li>
-        </ul>
-    </ul>
-</div>
+    <div class="paragraphTitle"> Insegnamenti anno accademico 2021-2022</div>
+    <div class = paragraphWrapper>   
+      <div class="paragraph"> 
+      <ul>
+        <li><strong>Sistemi Informativi su Web (6CFU)</strong></li>
+          <ul>
+            <li>SECONDO SEMESTRE</li>
+            <li>(Laurea in Ingegneria Informatica, Laurea Magistrale in Ingegneria delle Tecnologie della Comunicazione e dell'Informazione)</li>
+          </ul>
+        <li><strong>Ingegneria dei dati (6CFU)</strong></li>
+          <ul>
+            <li>PRIMO SEMESTRE</li>
+            <li>(Laurea Magistrale in Ingegneria Informatica)</li>
+          </ul>
+        <li><strong>Conoscenze Utili per l'Inserimento nel Mondo del Lavoro (1CFU)</strong></li>
+          <ul>
+            <li>SECONDO SEMESTRE</li>
+            <li>(Laurea Magistrale in Ingegneria Informatica, Laurea Magistrale in Ingegneria Gestionale e dell'Automazione)</li>
+          </ul>
+        <li><strong>Imprenditorialità digitale (6 CFU)</strong></li>
+          <ul>
+            <li>PRIMO SEMESTRE</li>
+            <li>(Laurea Magistrale in Ingegneria Informatica, Laurea Magistrale in Ingegneria Gestionale e dell'Automazione)</li>
+          </ul>
+      </ul>
+      </div>
+    </div>  
 
+  <div class="paragraphTitle">Tirocini</div>
+  <div class = paragraphWrapper>   
     <div class="paragraph">
-    <span class="paragraphTitle">TIROCINI</span>
       <h3>proposte di tesi e tirocini nei progetti di ricerca</h3>
         <ul>
           <li>Progetto Kelpie (in collaborazione con University of Alberta)</li>
