--- a/homework2-siw.html
+++ b/homework2-siw.html
@@ -7,10 +7,8 @@
   <title>Paolo Merialdo: Home Page (homework2-siw)</title>
 </head>
 <body>
-  <h1>PAOLO MERIALDO </h1>
 
-
-       <div class="paragraphTitle">General info</div>
+       <div id = "general-info" class="paragraphTitle">General info</div>
     <div class = paragraphWrapper>   
       <div class="paragraph">
       <ul>
@@ -27,7 +25,7 @@
       </div>
     </div>
 
-    <div class="paragraphTitle">Research</div>
+    <div id = "research" class="paragraphTitle">Research</div>
     <div class = paragraphWrapper>   
       <div class="paragraph">
       <h3>Research Activities</h3>
@@ -76,7 +74,7 @@
   </div>
 
     
-    <div class="paragraphTitle">Didattica (teaching)</div>  
+    <div id = "didattica" class="paragraphTitle">Didattica (teaching)</div>  
     <div class = paragraphWrapper>   
       <div class="paragraph">
       <h3>Corsi, Orario di ricevimento, tesi, valutazioni della didattica, ecc.</h3>
@@ -87,7 +85,7 @@
   </div>
   </div>
 
-    <div class="paragraphTitle">Other activities</div>  
+    <div id = "other-activities" class="paragraphTitle">Other activities</div>  
     <div class = paragraphWrapper>   
       <div class="paragraph">
 
@@ -103,7 +101,7 @@
       </div>
     </div>
 
-    <div class="paragraphTitle"> Insegnamenti anno accademico 2021-2022</div>
+    <div id = "insegnamenti" class="paragraphTitle"> Insegnamenti anno accademico 2021-2022</div>
     <div class = paragraphWrapper>   
       <div class="paragraph"> 
       <ul>
@@ -131,7 +129,7 @@
       </div>
     </div>  
 
-  <div class="paragraphTitle">Tirocini</div>
+  <div id = "tirocini" class="paragraphTitle">Tirocini</div>
   <div class = paragraphWrapper>   
     <div class="paragraph">
       <h3>proposte di tesi e tirocini nei progetti di ricerca</h3>
@@ -160,6 +158,25 @@
           <li>vedi bacheca davanti allo studio del docente</li>
         </ul>
     </div>
+
+<div class="wrapper">
+        <div class="sidebar">
+           <div class="profilo">
+                <img src=http://merialdo.dia.uniroma3.it/paolo-merialdo.jpg>
+                <h3>Paolo Merialdo</h3>
+  </div>
+          <ul>
+            <li><a href=#general-info>General info</a></li>
+            <li><a href=#research>Research</a></li>
+            <li><a href=#didattica>Didattica</a></li>
+            <li><a href=#other-activities>Other activities</a></li>
+            <li><a href=#insegnamenti>Insegnamenti</a></li>
+            <li><a href=#tirocini>Tirocini</a></li>
+          </ul>
+        </div>
+
+    </div>
+
 
 </body>
 </html>
